# dm-artwork-analysis

./: .gitignore  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
notebooks/: final_showcase.ipynb  midterm_progress.ipynb
src/: classifier.py  clusterer.py  config.py  data_loader.py  eda.py  features.py  predictor.py  utils.py  visualizer.py
